k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kcd-keynote
  labels:
    app: kcd-keynote
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kcdgujarat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kcd-keynote
                port:
                  number: 80
